# python-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  lint.sh  pyproject.toml
.github/workflows/: lint-python.yaml
fastapi_tutorial/: main.py
fastapi_tutorial/models/: user.py
fastapi_tutorial/qb_rating/: models.py  router.py  service.py
http_requests/: quarterback_rating.http
